<resources>
    <string name="linkLogin">https://www.jcodonuts.com/login</string>
    <string name="linkForgot">https://www.jcodonuts.com/forgot</string>
    <string name="linkRegister">https://www.jcodonuts.com/register</string>
    <string name="linkLinkaja">https://www.jcodonuts.com/linkaja</string>
    <string name="linkTopup">https://www.jcodonuts.com/topup</string>
    <string name="linkProductDetail">https://www.jcodonuts.com/product_detail/?id={id}</string>
    <string name="linkPickupFragment">https://www.jcodonuts.com/pickup</string>
    <string name="linkDeliveryFragment">https://www.jcodonuts.com/delivery</string>
    <string name="linkMenuSearchFragment">https://www.jcodonuts.com/menu_search</string>
    <string name="linkChoosePaymentFragment">https://www.jcodonuts.com/choose_payment</string>
    <string name="linkPaymentDetailFragment">https://www.jcodonuts.com/payment_detail</string>
    <string name="linkTrackingFragment">https://www.jcodonuts.com/tracking</string>
    <string name="linkHome">https://www.jcodonuts.com/home</string>
    <string name="linkMainFragment">https://www.jcodonuts.com/main_fragment</string>
    <string name="linkMainFragmentWithArgument">https://www.jcodonuts.com/main_fragment/{menu}</string>
    <string name="linkHotPromoFragment">https://www.jcodonuts.com/hot_promo</string>
    <string name="linkChangePasswordFragment">https://www.jcodonuts.com/change_password</string>
    <string name="linkEditProfileFragment">https://www.jcodonuts.com/edit_profile</string>
    <string name="linkLanguageFragment">https://www.jcodonuts.com/language</string>
    <string name="linkOrderFragment">https://www.jcodonuts.com/order</string>
    <string name="linkContactUsFragment">https://www.jcodonuts.com/contact_us</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nisi vitae ornare congue, lectus dui porta dui, vitae pulvinar odio velit ac leo. Proin eget pharetra neque. Etiam tempor arcu a eleifend interdum. Nam diam dui, pulvinar in consectetur non, mollis quis tortor. Nulla mauris libero, lacinia eu pharetra et, efficitur vel libero. Phasellus quis purus venenatis, tincidunt nibh pharetra, consectetur ex. Mauris a turpis feugiat, semper ante quis, pellentesque tellus. Morbi pharetra convallis sodales. Morbi sed maximus leo. Donec nec lacinia mi. Quisque commodo nibh convallis, iaculis quam eget, aliquet felis. Nunc consectetur leo sit amet blandit pulvinar. Aliquam erat volutpat. Vestibulum sit amet risus ultricies, vestibulum sem sit amet, vestibulum velit. In nunc nisi, congue iaculis sodales quis, feugiat mattis massa. Pellentesque id tempus mauris.Maecenas maximus, sem venenatis fringilla euismod, libero tellus euismod massa, non semper sem sem nec tortor. Aliquam quis gravida lorem. Suspendisse condimentum condimentum magna, ut tincidunt ligula fringilla sit amet. Ut porttitor ligula ligula, ut varius justo dictum eget. Fusce eget condimentum dolor. Duis gravida ligula eu ornare mollis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent sit amet aliquam dolor. Phasellus odio sem, malesuada a nunc vel, interdum imperdiet sapien. Curabitur dignissim posuere convallis. Fusce felis libero, dapibus in dictum sed, vestibulum id elit.Nullam sodales est quis orci ultrices, quis rhoncus lacus aliquam. Nunc laoreet placerat dolor, ac lacinia ante maximus in. Aliquam erat volutpat. Mauris dignissim quam leo, ut vestibulum purus auctor vel. Sed ut urna vel ex hendrerit tempus eu vitae neque. Sed in ultricies magna. Nam in eleifend dui. Ut rutrum leo at magna faucibus, id ullamcorper ante vestibulum. Nulla mauris tortor, molestie id odio nec, volutpat convallis tortor. Aliquam sed purus at orci euismod ornare rutrum in tortor. Cras scelerisque eu elit sollicitudin feugiat.In facilisis risus sit amet odio rutrum lobortis. Quisque quis nulla ex. Nullam dictum eget nulla sed condimentum. Sed at ante scelerisque, pellentesque est ut, auctor lacus. Nam dapibus vel nisl ac pellentesque. Nullam et interdum eros. Suspendisse viverra, mi sit amet auctor iaculis, neque nisl bibendum libero, interdum mollis enim orci in elit.</string>
    <string name="app_name">Jco</string>
    <string name="news_app">J.co</string>
    <string name="transition_splash">transition_splash</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="oops">Oops..!</string>
    <string name="retry">Retry</string>
    <string name="empty_message">Oops…\nlooks like the one you\'re looking for doesn\'t exist</string>
    <string name="detail_article">Detail Article</string>
    <string name="delivery_app">Delivery App</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Profile</string>
    <string name="phone_number">Phone number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="lets_create">Let\'s Create</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_pass_desc">Enter your phone number associated with your account and we will send you an OTP code to reset your password.</string>
    <string name="send">Send</string>
    <string name="didnt_receiver_the_otp">Didn\'t receiver the OTP?</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="create_new_password">Create new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="input_your_number">Input your number</string>
    <string name="next">Next</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verification">Verification</string>
    <string name="full_name">Full name</string>
    <string name="saldo">Saldo</string>
    <string name="barcode">Barcode</string>
    <string name="qr_code">Qr Code</string>
    <string name="jpoints">JPoints</string>
    <string name="pick_up_from">Pick up from</string>
    <string name="food_drink_or_anything">Food, drink or anything</string>
    <string name="promo">Promo</string>
    <string name="you_cannot_place_an_order">You cannot place an order</string>
    <string name="if_you_want_to_place_an_order_you_must_login_or_create_an_account_first">If you want to place an order you must login or create an account first</string>
    <string name="register">Register</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="donuts">Donuts</string>
    <string name="show_the_barcode_to_be_scanned_by_the_cashier">Show the barcode to be scanned by the cashier</string>
    <string name="scan_code_to_pay">Scan code to pay</string>
    <string name="search_here">Search here</string>
    <string name="outlet_for_pickup">Outlet for pickup</string>
    <string name="add_detail_location">Add detail location</string>
    <string name="notes">Notes</string>
    <string name="payment">Payment</string>
    <string name="change">Change</string>
    <string name="price">Price</string>
    <string name="delivery_service">Delivery Service</string>
    <string name="order">Order</string>
    <string name="total_price">Total Price</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="you_can_make_any_notes_for_the_outlet">You can make any notes for the outlet</string>
    <string name="order_summary">Order Summary</string>
    <string name="no_order">No order</string>
    <string name="copy">Copy</string>
    <string name="purchase_date">Purchase date</string>
    <string name="products">Products</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="task_service"><![CDATA[Tax & Service]]></string>
    <string name="total">Total</string>
    <string name="your_order_has_been_processed_after_that_we_will_immediately_send_it">Your order has been processed, after that we will immediately send it.</string>
    <string name="order_again">Order Again</string>
    <string name="tracking">Tracking</string>
    <string name="pickup_at">Pickup at</string>
    <string name="status">Status</string>
    <string name="order_has_arrived_please_confirm_your_order">Order has arrived please confirm your order.</string>
    <string name="confirm">Confirm</string>
    <string name="jco_donuts">JCO Donuts</string>
    <string name="jco_reserve">JCO Reserve</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="promo_period">Promo Period</string>
    <string name="hot_promo">Hot Promo</string>
    <string name="see_all">See all</string>
    <string name="wishlist">Wishlist</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_balance">Your balance</string>
    <string name="jpoint">JPoint</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="cancel">Cancel</string>
    <string name="change_photo">Change Photo</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="change_password">Change Password</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="language">Language</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="link_aja">Link Aja</string>
    <string name="m_banking">M-Banking</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="err_password_empty">Password number cannot be empty</string>
    <string name="err_phone_empty">Phone number cannot be empty</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="err_password_length">The Password field must be at least 5 characters in length.</string>
    <string name="err_phone_length">The Phone number field must be at least 10 characters in length.</string>
    <string name="your_account_has_been_created">Your account has been created</string>
    <string name="please_login_to_place_an_order">Please login to place an order</string>
    <string name="invalid_code">Invalid code</string>
    <string name="network_error">Network error</string>
    <string name="verification_code_sent">Verification code sent</string>
    <string name="email">Email</string>
    <string name="err_password_not_same">Confirm password must be same with password</string>
    <string name="err_email_invalid">Email invalid</string>
    <string name="err_email_empty">Email cannot be empty</string>
</resources>