<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/ic_bag"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/menu_cart"/>
    <item
        android:id="@+id/wishlist"
        android:enabled="true"
        android:icon="@drawable/ic_wishlist"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/wishlist"/>
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/menu_notification"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="@string/menu_profile"/>
</menu>