<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dlg_cannot_place_order"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/you_cannot_place_an_order"
            android:textSize="20sp"
            android:textColor="@color/c_black"/>

        <ImageView
            android:id="@+id/btnDlgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close"
            app:tint="@color/c_black"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_want_to_place_an_order_you_must_login_or_create_an_account_first"
        android:textSize="16sp"
        android:textColor="@color/c_text_secondary"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:text="@string/login"
        style="@style/MyButton"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:text="@string/register"
        style="@style/MyButtonOutline"
        android:layout_marginTop="16dp"/>

</LinearLayout>