<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <include layout="@layout/layout_icon_jco"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/c_black"
                android:layout_marginTop="32dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPhoneNo"
                    android:hint="@string/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="32dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/forgot_password"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/c_link"
                android:padding="4dp"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/c_text_secondary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/lets_create"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/c_link"
                    android:padding="4dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>