<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dlg_cannot_place_order"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/c_black"/>

        <ImageView
            android:id="@+id/btnDlgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close"
            app:tint="@color/c_black"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/male"
            android:textSize="16sp"
            android:textColor="@color/c_black"
            android:paddingVertical="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_divider"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/RadioFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/female"
            android:textSize="16sp"
            android:textColor="@color/c_black"
            android:paddingVertical="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_divider"/>

    </RadioGroup>



</LinearLayout>